// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div
  className="fcmkk1"
>
  Hello
</div>
`;

exports[`should render 1 button 1`] = `
<div
  className="fcmkk1"
>
  <button
    className="f8n1gf0"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 1 button 2`] = `
"
.fcmkk1 {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  white-space: nowrap
}

.f8n1gf0:hover {
  background-color: #2869a2;
  border-color: #215685;
  color: #fff
}

.f8n1gf0:active {
  background-color: #215685;
  border-color: #1a4468;
  color: #fff
}

.f8n1gf0:focus {
  background-color: #2f7bbf;
  color: #fff;
  border-color: #2869a2
}

.f8n1gf0[title] {
  pointer-events: none
}

.f8n1gf0 {
  background-color: #2f7bbf;
  border-bottom: 1px solid;
  border-color: #2869a2;
  border-left: 0px;
  border-right: 0px;
  border-top: 0px;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif;
  font-size: 0.9333333333333333rem;
  font-weight: 400;
  line-height: 1.2;
  margin-bottom: 0px;
  margin-right: 0px;
  margin-top: 0px;
  margin-left: 0px;
  opacity: inherit;
  padding-bottom: 0.53em;
  padding-left: 1em;
  padding-right: 1em;
  padding-top: 0.6em;
  pointer-events: auto;
  position: relative;
  border-top-right-radius: 2px;
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
  border-bottom-right-radius: 2px;
  text-align: center;
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  float: none;
  max-width: initial
}
"
`;

exports[`should render 2`] = `
"
.fcmkk1 {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  white-space: nowrap
}
"
`;

exports[`should render 2 buttons 1`] = `
<div
  className="fcmkk1"
>
  <button
    className="fiwt3vg"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="f8n1gf0"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 2 buttons 2`] = `
"
.fcmkk1 {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  white-space: nowrap
}

.fiwt3vg:hover {
  background-color: #2869a2;
  border-color: #215685;
  color: #fff
}

.fiwt3vg:active {
  background-color: #215685;
  border-color: #1a4468;
  color: #fff
}

.fiwt3vg:focus {
  background-color: #2f7bbf;
  color: #fff;
  border-color: #2869a2
}

.fiwt3vg[title] {
  pointer-events: none
}

.fiwt3vg {
  background-color: #2f7bbf;
  border-bottom: 1px solid;
  border-color: #2869a2;
  border-left: 0px;
  border-right: 0px;
  border-top: 0px;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif;
  font-size: 0.9333333333333333rem;
  font-weight: 400;
  line-height: 1.2;
  margin-bottom: 0px;
  margin-right: 0px;
  margin-top: 0px;
  margin-left: 0px;
  opacity: inherit;
  padding-bottom: 0.53em;
  padding-left: 1em;
  padding-right: 1em;
  padding-top: 0.6em;
  pointer-events: auto;
  position: relative;
  border-top-right-radius: 0px;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 0px;
  text-align: center;
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  float: none;
  max-width: initial
}

.f8n1gf0:hover {
  background-color: #2869a2;
  border-color: #215685;
  color: #fff
}

.f8n1gf0:active {
  background-color: #215685;
  border-color: #1a4468;
  color: #fff
}

.f8n1gf0:focus {
  background-color: #2f7bbf;
  color: #fff;
  border-color: #2869a2
}

.f8n1gf0[title] {
  pointer-events: none
}

.f8n1gf0 {
  background-color: #2f7bbf;
  border-bottom: 1px solid;
  border-color: #2869a2;
  border-left: 0px;
  border-right: 0px;
  border-top: 0px;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif;
  font-size: 0.9333333333333333rem;
  font-weight: 400;
  line-height: 1.2;
  margin-bottom: 0px;
  margin-right: 0px;
  margin-top: 0px;
  margin-left: 0px;
  opacity: inherit;
  padding-bottom: 0.53em;
  padding-left: 1em;
  padding-right: 1em;
  padding-top: 0.6em;
  pointer-events: auto;
  position: relative;
  border-top-right-radius: 2px;
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
  border-bottom-right-radius: 2px;
  text-align: center;
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  float: none;
  max-width: initial
}
"
`;

exports[`should render 3 buttons 1`] = `
<div
  className="fcmkk1"
>
  <button
    className="fiwt3vg"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="f5141ss"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="f8n1gf0"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 3 buttons 2`] = `
"
.fcmkk1 {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  white-space: nowrap
}

.fiwt3vg:hover {
  background-color: #2869a2;
  border-color: #215685;
  color: #fff
}

.fiwt3vg:active {
  background-color: #215685;
  border-color: #1a4468;
  color: #fff
}

.fiwt3vg:focus {
  background-color: #2f7bbf;
  color: #fff;
  border-color: #2869a2
}

.fiwt3vg[title] {
  pointer-events: none
}

.fiwt3vg {
  background-color: #2f7bbf;
  border-bottom: 1px solid;
  border-color: #2869a2;
  border-left: 0px;
  border-right: 0px;
  border-top: 0px;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif;
  font-size: 0.9333333333333333rem;
  font-weight: 400;
  line-height: 1.2;
  margin-bottom: 0px;
  margin-right: 0px;
  margin-top: 0px;
  margin-left: 0px;
  opacity: inherit;
  padding-bottom: 0.53em;
  padding-left: 1em;
  padding-right: 1em;
  padding-top: 0.6em;
  pointer-events: auto;
  position: relative;
  border-top-right-radius: 0px;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 0px;
  text-align: center;
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  float: none;
  max-width: initial
}

.f5141ss:hover {
  background-color: #2869a2;
  border-color: #215685;
  color: #fff
}

.f5141ss:active {
  background-color: #215685;
  border-color: #1a4468;
  color: #fff
}

.f5141ss:focus {
  background-color: #2f7bbf;
  color: #fff;
  border-color: #2869a2
}

.f5141ss[title] {
  pointer-events: none
}

.f5141ss {
  background-color: #2f7bbf;
  border-bottom: 1px solid;
  border-color: #2869a2;
  border-left: 0px;
  border-right: 0px;
  border-top: 0px;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif;
  font-size: 0.9333333333333333rem;
  font-weight: 400;
  line-height: 1.2;
  margin-bottom: 0px;
  margin-right: 0px;
  margin-top: 0px;
  margin-left: 0px;
  opacity: inherit;
  padding-bottom: 0.53em;
  padding-left: 1em;
  padding-right: 1em;
  padding-top: 0.6em;
  pointer-events: auto;
  position: relative;
  border-top-right-radius: 0px;
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
  border-bottom-right-radius: 0px;
  text-align: center;
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  float: none;
  max-width: initial
}

.f8n1gf0:hover {
  background-color: #2869a2;
  border-color: #215685;
  color: #fff
}

.f8n1gf0:active {
  background-color: #215685;
  border-color: #1a4468;
  color: #fff
}

.f8n1gf0:focus {
  background-color: #2f7bbf;
  color: #fff;
  border-color: #2869a2
}

.f8n1gf0[title] {
  pointer-events: none
}

.f8n1gf0 {
  background-color: #2f7bbf;
  border-bottom: 1px solid;
  border-color: #2869a2;
  border-left: 0px;
  border-right: 0px;
  border-top: 0px;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif;
  font-size: 0.9333333333333333rem;
  font-weight: 400;
  line-height: 1.2;
  margin-bottom: 0px;
  margin-right: 0px;
  margin-top: 0px;
  margin-left: 0px;
  opacity: inherit;
  padding-bottom: 0.53em;
  padding-left: 1em;
  padding-right: 1em;
  padding-top: 0.6em;
  pointer-events: auto;
  position: relative;
  border-top-right-radius: 2px;
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
  border-bottom-right-radius: 2px;
  text-align: center;
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  float: none;
  max-width: initial
}
"
`;

exports[`should render 3 buttons with spacing 1`] = `
<div
  className="fcmkk1"
>
  <button
    className="f12tyf0k"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="f1n7ummk"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="f1n7ummk"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 3 buttons with spacing 2`] = `
"
.fcmkk1 {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  white-space: nowrap
}

.f12tyf0k:hover {
  background-color: #2869a2;
  border-color: #215685;
  color: #fff
}

.f12tyf0k:active {
  background-color: #215685;
  border-color: #1a4468;
  color: #fff
}

.f12tyf0k:focus {
  background-color: #2f7bbf;
  color: #fff;
  border-color: #2869a2
}

.f12tyf0k[title] {
  pointer-events: none
}

.f12tyf0k {
  background-color: #2f7bbf;
  border-bottom: 1px solid;
  border-color: #2869a2;
  border-left: 0px;
  border-right: 0px;
  border-top: 0px;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif;
  font-size: 0.9333333333333333rem;
  font-weight: 400;
  line-height: 1.2;
  margin-bottom: 0px;
  margin-right: 0px;
  margin-top: 0px;
  margin-left: 0px;
  opacity: inherit;
  padding-bottom: 0.53em;
  padding-left: 1em;
  padding-right: 1em;
  padding-top: 0.6em;
  pointer-events: auto;
  position: relative;
  border-radius: 2px;
  text-align: center;
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  float: none;
  max-width: initial
}

.f1n7ummk:hover {
  background-color: #2869a2;
  border-color: #215685;
  color: #fff
}

.f1n7ummk:active {
  background-color: #215685;
  border-color: #1a4468;
  color: #fff
}

.f1n7ummk:focus {
  background-color: #2f7bbf;
  color: #fff;
  border-color: #2869a2
}

.f1n7ummk[title] {
  pointer-events: none
}

.f1n7ummk {
  background-color: #2f7bbf;
  border-bottom: 1px solid;
  border-color: #2869a2;
  border-left: 0px;
  border-right: 0px;
  border-top: 0px;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif;
  font-size: 0.9333333333333333rem;
  font-weight: 400;
  line-height: 1.2;
  margin-bottom: 0px;
  margin-right: 0px;
  margin-top: 0px;
  margin-left: 0.4rem;
  opacity: inherit;
  padding-bottom: 0.53em;
  padding-left: 1em;
  padding-right: 1em;
  padding-top: 0.6em;
  pointer-events: auto;
  position: relative;
  border-radius: 2px;
  text-align: center;
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  float: none;
  max-width: initial
}
"
`;
